--- a/index.html
+++ b/index.html
@@ -2,30 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Check Weather</title>
 </head>
 <body>
     <main>
-        <section class="block_container">
-        <section class="main_section" id="main_section">
-            <h2>
-                Main area box
-            </h2>
-        </section>
-        <section class="second_section">
-            <p>City Name</p>
-            <input type="number" placeholder="Your guess text box">
-        </section>
-        <button>
-            Check
-        </button>
-        <hr>
-    </section>
+      <section class="container_block">
+            <section class="main_section" id="main_section">
+                <h2>Main area box</h2>
+            </section>
+            <section class="second_section" id="second_section">
+                <p>City Name</p>
+                <input type="number" placeholder="Your guess text box">
+            </section>
+            <button>Check</button>
+         </section>
+    <hr>
     </main>
-    <script src="./script/index.js">
-
-    </script>
+    <script src="./script/index.js"></script>
 </body>
 </html>
